Release Notes

HEAD, planned as v0.30
- Added a search function
- Added a presentation mode.
- Adds Q and CTRL-Q hotkeys to copy the component the mouse
  pointer is hovering over.
- The remote server is now disabled by default.
  It must be enabled in the settings.
- When a new component has been placed with CRTL click,
  you can place another one.
- Fixes the ignored default value in demuxer HDL export.

v0.29, released on 11. February 2022
- Allows loading byte base files in big-endian format.
- Added some more DIL chips
- Tunnel now shows signal state
- Fixes tutorial dialog positioning issue
- Fixed some issues with 7489 and 74189
- Fixed a bug in the LUT component that caused difficulties
  when generic code was executed.
- Fixed an issue in the seven segment persistence of vision
  implementation.
- Fixed a Verilog generation issue when using filenames that
  contain spaces.

v0.28, released on 13. September 2021
- Inputs and outputs can have a smaller shape.
- Added paste functionality to ROM data editor.
- Added an rle encoding for storing rom content, which can
  result in smaller dig files.
- Added some more ATF150x devices
- Probe is able to count edges.
- Italian translation was added, special thanks to Luca Cavallari
- Added an external component that is based on a file instead
  of storing the code in the component itself.
- Fixed an issue with clicking on tightly placed components.
- Allows variable sample size in default data graph.
- Added an option to skip certain sub-circuits in HDL creation.
  This allows the user to use a handwritten HDL implementation
  of the sub-circuit.

v0.27, released on 9. Apr. 2021
- Added fixed point and floating point number formats.
- Adds a dialog to create a behavioral fixture.
- Added a CSV truth table export and import.
- Added a search field to the component tree view.
- Added 74299
- Refactoring of the expression format setting.
  CAUTION: All the general settings are maybe lost at restart!